# ClipVault-web

./: README.md  index.html  package-lock.json  package.json  tsconfig.tsbuildinfo  vite.config.ts
assets/: CategoriesPage-4IrV4yVp.js  CategoriesPage-BMaSD2sB.js  CategoriesPage-BNLw1b_Q.js  CategoriesPage-C4Kkw_sU.js  CategoriesPage-CU6Ym_TS.js  CategoriesPage-DO_x3-dw.js  CategoriesPage-DOstkQC4.js  CategoriesPage-Op_x8OLs.js  ClipItem-BX9AEOwu.js  ClipItem-BqasFveP.js  ClipItem-CJXiRb_V.js  ClipItem-CWqRjIr1.js  ClipItem-DYdxLu44.js  ClipItem-DjS0ge7E.js  ClipItem-Du1pav8N.js  ClipItem-mRxzIau2.js  EmptyState-B2AYCpxr.js  EmptyState-BGlmgjB-.js  EmptyState-BJ-692RY.js  EmptyState-BV2IAf1E.js  EmptyState-BjYp3J0e.js  EmptyState-C2O7G2bx.js  EmptyState-ly_ASnVL.js  EmptyState-r20phtoH.js  FavoritesPage-86dDWWLV.js  FavoritesPage-BBBpU11I.js  FavoritesPage-BxJTkdBX.js  FavoritesPage-Cj1VUAcN.js  FavoritesPage-CjBkndpu.js  FavoritesPage-DIaM97uU.js  FavoritesPage-DxyxQaUj.js  FavoritesPage-ooBd5hIP.js  HistoryPage-B7vdgIPJ.js  HistoryPage-BODOaz3q.js  HistoryPage-BkB5RmZR.js  HistoryPage-BkMQHtNb.js  HistoryPage-Br-bEdF4.js  HistoryPage-CaYfhssR.js  HistoryPage-CrC3THfT.js  HistoryPage-DgDNPA0n.js  (+24 more)
src/: App.tsx
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/src/: main.rs
src/components/: CategoryBadge.tsx  CategoryFilter.tsx  ClipItem.tsx  EmptyState.tsx  SearchBar.tsx
src/hooks/: useClipboardHistory.ts  useTheme.ts
src/licensing/: config.ts
src/pages/: CategoriesPage.tsx  FavoritesPage.tsx  HistoryPage.tsx  HomePage.tsx  SettingsPage.tsx
(+2 files in other folders)
